--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/assets/logo-little.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nextjai - Automation</title>
+    <title>Nextjai</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
